src/objects/Apttus_Config2__OrderTaxBreakup__c.object
<CustomObject>
    <description>Represents the tax breakup of a product/service</description>
    <fields>
        <fullName>Apttus_Config2__BreakupType__c</fullName>
        <description>The tax break type</description>
        <inlineHelpText>The tax break type</inlineHelpText>
        <label>Breakup Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detail</fullName>
                    <default>true</default>
                    <label>Detail</label>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderLineItemId__c</fullName>
        <description>ID of the associated order line item</description>
        <inlineHelpText>ID of the associated order line item</inlineHelpText>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Order Tax Breakups</relationshipLabel>
        <relationshipName>OrderTaxBreakups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The breakup sequence</description>
        <inlineHelpText>The breakup sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxAmount__c</fullName>
        <description>The tax amount</description>
        <inlineHelpText>The tax amount</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxAppliesTo__c</fullName>
        <description>Indicates the price field the tax rate was applied to.</description>
        <inlineHelpText>Indicates the price field the tax rate was applied to.</inlineHelpText>
        <label>Tax Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net Price</fullName>
                </value>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxRate__c</fullName>
        <description>The tax rate</description>
        <inlineHelpText>The tax rate</inlineHelpText>
        <label>TaxRate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxType__c</fullName>
        <description>The tax type</description>
        <inlineHelpText>The tax type</inlineHelpText>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State Tax</fullName>
                </value>
                <value>
                    <fullName>County Tax</fullName>
                </value>
                <value>
                    <fullName>City Tax</fullName>
                </value>
                <value>
                    <fullName>District Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order Tax Breakup</label>
    <nameField>
        <displayFormat>OTB-{00000000}</displayFormat>
        <label>Breakup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Tax Breakups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>